# chat_server_grpc_tcp

grpc_server/: CMakeLists.txt  ChatStreamImpl.cc  ChatStreamImpl.h  SubRedisThread.cc  gen.sh  server.cc
grpc_server/generate/protos/: chat.grpc.pb.h  chat.pb.cc
grpc_server/protos/: chat.proto
tcp_server/: CMakeLists.txt  Server.cpp  Server.h  SubRedisThread.h  client.cc  main.cpp  sender.cpp
tcp_server/generate/protos/: chat.grpc.pb.cc  chat.pb.h
tcp_server/protocols/: generate_header.py  protocol.xml  request_handler.cpp
tcp_server/protocols/generate/: factory_request.h  protocol_utils.h  request_handler.h  request_template.h  response_template.h  types.h
tcp_server/protocols/interfaces/: RequestBase.h  ResponseBase.h
tcp_server/protocols/templates/: factory_template.jinja  request_handler.jinja  request_template.jinja  response_template.jinja  types.jinja
tcp_server/socket/: tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h
tcp_server/tests/: redis.cpp
tcp_server/utils/: CacheThread.cpp  CacheThread.h  SafeQueue.h  macros.h  socket_utils.h  thread_utils.h
